fix: font size not scaling on tablet

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -212,7 +212,6 @@ section {
   border-radius: var(--br-sm-2);
   height: 90%;
   width: 70%;
-  margin-left: 2rem;
   background-color: var(--color-grey-6);
   transition: all 0.6s ease-in-out;
 }
